src/styles.scss
/* Ensure popovers are above the menu */
.menu.pane-relief-history-menu ~ .popover.hover-popover {
    z-index: var(--layer-menu);
}

/* Give history counts a little breathing room, and match the title text size */
.titlebar .history-counter { font-size: 12px; padding-left: 3px; padding-right: 3px;}

/* Make the button and text more visible when you can go in that direction */
.titlebar-button.mod-back.mod-active:not(:hover),
.titlebar-button.mod-forward.mod-active:not(:hover)
{ opacity: 0.75; }

/* Maximizing */
.workspace-split.mod-root.should-maximize,
body > .popover.hover-popover .workspace-split.should-maximize
{
    .workspace-leaf:not(.is-maximized),
    .workspace-split:not(.has-maximized) {
      display: none;
    }
    .workspace-leaf.is-maximized {
      flex-basis: calc(100% - 4px); // 4px is for scrollbar width
    }
}

/* Pane Numbering */

body.pane-relief-pane-numbering {
  /* Number panes in their headers */
  .workspace-split .workspace-leaf .view-header-icon { min-width: fit-content; }
  .workspace-split .workspace-leaf .view-header-icon::before
  {
      content: "";
      display: inline-flex;
      position: relative;
      bottom: 3px;
      min-inline-size: 1em;
  }
  .workspace-split .workspace-leaf.has-pane-relief-label .view-header-icon::before
  {
      counter-reset: pane-number var(--pane-relief-label);
      content: counter(pane-number);
  }

  /* Number panes in "koncham workspace" plugin's Center Panes view */
  .workspace-leaf-content[data-type="center-panes"]
  { counter-reset: pane-number;}

  .workspace-leaf-content[data-type="center-panes"] .nav-file
  { counter-increment: pane-number;}

  .workspace-leaf-content[data-type="center-panes"] .nav-file-title-content::before
  {
      content: counter(pane-number) " ";
      min-width: 1.5em;
      display: inline-block;
  }

  .workspace-leaf-content[data-type="center-panes"] .nav-file:nth-child(8) ~ .nav-file .nav-file-title-content::before
  { content: " "; }
  .workspace-leaf-content[data-type="center-panes"] .nav-file:nth-child(8) ~ .nav-file:last-child .nav-file-title-content::before
  { content: "9 " !important; }
}

/* Disable history counts */
body.pane-relief-disable-counts .titlebar .history-counter { display: none; }

